--- a/src/Bundle/WebBundle/Resources/views/Frontend/Option/create.html.twig
+++ b/src/Bundle/WebBundle/Resources/views/Frontend/Option/create.html.twig
@@ -1,3 +1,4 @@
+{% block option_form %}
 <div class="form-content"> 
     <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
@@ -31,3 +32,4 @@
         </form>
     </div>
 </div>
+{% endblock %}
