--- a/src/Bundle/WebBundle/Resources/views/Frontend/Patient/form.html.twig
+++ b/src/Bundle/WebBundle/Resources/views/Frontend/Patient/form.html.twig
@@ -5,6 +5,7 @@
 {# For the full copyright and license information, please view the LICENSE #}
 {# file that was distributed with this source code. #}
 
+
 {% set count = form.fields|length %}
 {% set half_count = (count/2)|round(0, 'ceil') %}
 
@@ -14,6 +15,7 @@
 {% if count > 1 %}
     {% set row2fields = form.fields|slice(half_count, count) %}
 {% endif %}
+
 
 <div class="row">
     <div class="col-md-{% if pds %}10{% else %}12{% endif %}">
@@ -67,6 +69,7 @@
 {% include 'AccardWebBundle:Frontend/Patient:formTabs.html.twig' %}
 
 <div class="tab-content">
+    {% block patient_base %}
     <div class="tab-pane fade in active" id="patient-base">
         <div class="row">
             <div class="col-md-6">
@@ -81,6 +84,8 @@
             </div>
         </div>
     </div>
+    {% endblock %}
+    {% block patient_custom %}
     <div class="tab-pane fade" id="patient-custom">
         <div class="row">
             <div class="col-md-6">
@@ -99,15 +104,18 @@
             </div>
         </div>
     </div>
-    {% if accard_setting('patient.collect_phases') %}
-    <div class="tab-pane fade" id="patient-phases">
-        <div class="row">
-            <div id="phases" data-prototype="{{ _self.phase_form(form.phases.vars.prototype)|e }}">
-            {% for phase in form.phases %}
-                {{ _self.phase_form(phase) }}
-            {% endfor %}
+    {% endblock %}
+    {% block patient_collect_phases %}
+        {% if accard_setting('patient.collect_phases') %}
+        <div class="tab-pane fade" id="patient-phases">
+            <div class="row">
+                <div id="phases" data-prototype="{{ _self.phase_form(form.phases.vars.prototype)|e }}">
+                {% for phase in form.phases %}
+                    {{ _self.phase_form(phase) }}
+                {% endfor %}
+                </div>
             </div>
         </div>
-    </div>
-    {% endif %}
+        {% endif %}
+    {% endblock %}
 </div>
