--- a/src/Bundle/WebBundle/Resources/views/Frontend/Regimen/formTabs.html.twig
+++ b/src/Bundle/WebBundle/Resources/views/Frontend/Regimen/formTabs.html.twig
@@ -5,6 +5,7 @@
 {# For the full copyright and license information, please view the LICENSE #}
 {# file that was distributed with this source code. #}
 
+{% block regimen_form_tabs %}
 {% set add_activities = false %}
 
 {% if add_activities %}
@@ -23,3 +24,5 @@
     </li>
     {% endif %}
 </ul>
+
+{% endblock %}
