--- a/src/Bundle/WebBundle/Resources/views/Frontend/Sample/show.html.twig
+++ b/src/Bundle/WebBundle/Resources/views/Frontend/Sample/show.html.twig
@@ -11,5 +11,7 @@
 {% from 'AccardWebBundle:Common/Macros:misc.html.twig' import page_title %}
 
 {% block content %}
+	{% block page_title %}
     {{ page_title('accard.sample.title.show'|trans) }}
+	{% endblock %}
 {% endblock %}
