--- a/src/Bundle/WebBundle/Resources/views/Backend/Behavior/design.html.twig
+++ b/src/Bundle/WebBundle/Resources/views/Backend/Behavior/design.html.twig
@@ -26,9 +26,11 @@
 {% endmacro %}
 
 {% block content %}
-
+    {% block page_title %}
     {{ page_title('accard.behavior.action.design'|trans, _self.action_buttons()) }}
+    {% endblock %}
 
+    {% behavior_nav %}
     <ul class="nav nav-tabs" role="tablist">
         <li class="{{ _self.active_tab(['prototype', 'none'], 'active') }}">
             <a href="#prototypes" role="tab" data-toggle="tab">
@@ -46,8 +48,11 @@
             </a>
         </li>
     </ul>
+    {% endblock %}
 
+    {% block behavior_content %}
     <div class="tab-content grid-tabs">
+        {% block behavior_prototypes %}
         <div id="prototypes" class="tab-pane fade{{ _self.active_tab(['prototype', 'none'], ' in active') }}">
             <div class="panel panel-default">
                 <div class="panel-heading">
@@ -58,6 +63,8 @@
                 {{ list_prototypes(prototypes, 'accard_backend_behavior_prototype_update', 'accard_backend_behavior_prototype_delete') }}
             </div>
         </div>
+        {% endblock %}
+        {% block behavior_prototype_fields %}
         <div id="fields" class="tab-pane fade{{ _self.active_tab('field', ' in active') }}">
             <div class="panel panel-default">
                 <div class="panel-heading">
@@ -68,6 +75,8 @@
                 {{ list_fields(fields, 'accard_backend_behavior_field_update', 'accard_backend_behavior_field_delete') }}
             </div>
         </div>
+        {% endblock %}
+        {% block behavior_settings %}
         <div id="settings" class="tab-pane fade{{ _self.active_tab('settings', ' in active') }}">
             <form action="{{ path('accard_backend_behavior_settings_update') }}" method="POST" enctype="{{ form_enctype(settings_form) }}">
                 {{ form_widget(settings_form._token) }}
@@ -86,8 +95,9 @@
                 </div>
             </form>
         </div>
+        {% endblock %}
     </div>
-
+    {% endblock %}
 {% endblock %}
 
 {% block page_javascripts %}
