--- a/src/Bundle/WebBundle/Resources/views/Backend/Diagnosis/design.html.twig
+++ b/src/Bundle/WebBundle/Resources/views/Backend/Diagnosis/design.html.twig
@@ -14,6 +14,7 @@
 
 
 {% block content %}
+    {% block page_title %}
     {{ page_title(
         'accard.diagnosis.action.design'|trans,
         [
@@ -21,8 +22,11 @@
             create(path('accard_frontend_diagnosis_create'), 'accard.diagnosis.action.create'|trans)
         ]
     ) }}
+    {% endblock %}
 
+    {% block diagnosis_content %}
     <div class="row">
+        {% block diagnosis_field_panel %}
         <div class="col-md-8">
             <div class="panel panel-default">
                 <div class="panel-heading">
@@ -36,13 +40,17 @@
                 {{ list_fields(fields, 'accard_backend_diagnosis_field_update', 'accard_backend_diagnosis_field_delete') }}
             </div>
         </div>
+        {% endblock %}
+        {% block diagnosis_code_group_panel %}
         <div class="col-md-4">
             {{ button(path('accard_backend_diagnosis_code_group_index'), 'accard.diagnosis_code_group.action.manage'|trans, 'block') }}
             {{ button(path('accard_backend_diagnosis_phase_index'), 'accard.diagnosis.action.manage_phases'|trans, 'block') }}
         </div>
+        {% endblock %}
     </div>
 
     <div class="row">
+        {% block diagnosis_settings_panel %}
         <div class="col-md-8">
             <form action="{{ path('accard_backend_diagnosis_settings_update') }}" method="POST" enctype="{{ form_enctype(settings_form) }}">
                 {{ form_widget(settings_form._token) }}
@@ -62,11 +70,15 @@
                 </div>
             </form>
         </div>
+        {% endblock %}
+        {% block diagnosis_statistics_panel %}
         <div class="col-md-4">
             {{ statistics([
                 'accard.diagnosis.message.count'|trans({'%total%': diagnoses_count}),
                 'accard.diagnosis.message.count_fields'|trans({'%total%': fields|length})
             ]) }}
         </div>
+        {% endblock %}
     </div>
+    {% endblock %}
 {% endblock %}
