--- a/src/Bundle/WebBundle/Resources/views/Backend/DiagnosisPhase/update.html.twig
+++ b/src/Bundle/WebBundle/Resources/views/Backend/DiagnosisPhase/update.html.twig
@@ -12,10 +12,13 @@
 {% from 'AccardWebBundle:Common/Macros:misc.html.twig' import page_title %}
 
 {% block content %}
+    {% block page_title %}
     {{ page_title('accard.interface.backend.titles.update_diagnosis_phase'|trans, [
         design(path('accard_backend_diagnosis_design'), 'accard.diagnosis.action.design'|trans)
     ]) }}
+    {% endblock %}
 
+    {% block diagnosis_phase_form %}
     {{ form_errors(form) }}
     
     <form action="{{ path('accard_backend_diagnosis_phase_update', { id: diagnosis_phase.id }) }}" method="post" {{ form_enctype(form) }}>
@@ -28,4 +31,5 @@
             </div>
         </div>
     </form>
+    {% endblock %}
 {% endblock %}
