--- a/src/Bundle/WebBundle/Resources/views/Backend/Option/create.html.twig
+++ b/src/Bundle/WebBundle/Resources/views/Backend/Option/create.html.twig
@@ -12,8 +12,10 @@
 {% from 'AccardWebBundle:Common/Macros:misc.html.twig' import page_title %}
 
 {% block content %}
-    {{ page_title('accard.interface.backend.titles.create_option'|trans) }}
-
+    {% block page_title %}
+        {{ page_title('accard.interface.backend.titles.create_option'|trans) }}
+    {% endblock %}
+    {% block option_form %}
     {{ no_javascript() }}
     {{ form_errors(form) }}
     
@@ -27,6 +29,7 @@
             </div>
         </div>
     </form>
+    {% endblock %}
 {% endblock %}
 
 {% block page_javascripts %}
