--- a/src/Bundle/WebBundle/Resources/views/Backend/Option/form.html.twig
+++ b/src/Bundle/WebBundle/Resources/views/Backend/Option/form.html.twig
@@ -8,6 +8,7 @@
 {% from 'AccardWebBundle:Common/Macros:misc.html.twig' import icon %}
 
 {% macro option_value_form(option_value) %}
+
 <div class="row lockable">
     <div class="col-sm-10">
         {{ form_widget(option_value.value) }}
@@ -16,8 +17,10 @@
         {{ form_widget(option_value.locked, { label_render: false }) }}
     </div>
 </div>
+
 {% endmacro %}
 
+{% block option_value_form %}
 {{ form_widget(form._token) }}
 
 <div class="row">
@@ -40,3 +43,4 @@
         </a>
     </div>
 </div>
+{% endblock %}
