--- a/src/Bundle/WebBundle/Resources/views/Backend/PatientPhase/form.html.twig
+++ b/src/Bundle/WebBundle/Resources/views/Backend/PatientPhase/form.html.twig
@@ -4,7 +4,7 @@
 
 {# For the full copyright and license information, please view the LICENSE #}
 {# file that was distributed with this source code. #}
-
+{% block patient_phase_form %}
 <div class="row">
     <div class="col-md-6">
         {{ form_row(form.presentation) }}
@@ -14,3 +14,4 @@
         {{ form_row(form.order) }}
     </div>
 </div>
+{% endblock %}
