--- a/src/Bundle/WebBundle/Resources/views/Backend/Regimen/design.html.twig
+++ b/src/Bundle/WebBundle/Resources/views/Backend/Regimen/design.html.twig
@@ -12,6 +12,7 @@
 {% from 'AccardWebBundle:Common/Macros:fields.html.twig' import list_prototypes, list_fields %}
 
 {% macro action_buttons() %}
+    {% block regimen_action_buttons %}
     <div class="btn-group">
         <a href="{{ path('accard_frontend_regimen_index') }}" class="btn btn-primary">{{ 'accard.regimen.action.manage_all'|trans }}</a>
         <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
@@ -23,12 +24,16 @@
             <li><a href="{{ path('accard_backend_regimen_field_create') }}">{{ 'accard.regimen_prototype_field.action.create'|trans }}</a></li>
         </ul>
     </div>
+    {% endblock %}
 {% endmacro %}
 
 {% block content %}
+    {% block page_title %}
+        {{ page_title('accard.regimen.action.design'|trans, _self.action_buttons()) }}
+    {% endblock %}
 
-    {{ page_title('accard.regimen.action.design'|trans, _self.action_buttons()) }}
-
+    {% block regimen_content %}
+    {% block regimen_nav %}
     <ul class="nav nav-tabs" role="tablist">
         <li class="{{ _self.active_tab(['prototype', 'none'], 'active') }}">
             <a href="#prototypes" role="tab" data-toggle="tab">
@@ -46,8 +51,10 @@
             </a>
         </li>
     </ul>
+    {% endblock %}
 
     <div class="tab-content grid-tabs">
+        {% block regimen_prototypes %}
         <div id="prototypes" class="tab-pane fade{{ _self.active_tab(['prototype', 'none'], ' in active') }}">
             <div class="panel panel-default">
                 <div class="panel-heading">
@@ -58,6 +65,8 @@
                 {{ list_prototypes(prototypes, 'accard_backend_regimen_prototype_update', 'accard_backend_regimen_prototype_delete') }}
             </div>
         </div>
+        {% endblock %}
+        {% block regimen_prototype_fields %}
         <div id="fields" class="tab-pane fade{{ _self.active_tab('field', ' in active') }}">
             <div class="panel panel-default">
                 <div class="panel-heading">
@@ -68,6 +77,8 @@
                 {{ list_fields(fields, 'accard_backend_regimen_field_update', 'accard_backend_regimen_field_delete') }}
             </div>
         </div>
+        {% endblock %}
+        {% block regimen_settings %}
         <div id="settings" class="tab-pane fade{{ _self.active_tab('settings', ' in active') }}">
             <form action="{{ path('accard_backend_regimen_settings_update') }}" method="POST" enctype="{{ form_enctype(settings_form) }}">
                 {{ form_widget(settings_form._token) }}
@@ -86,8 +97,9 @@
                 </div>
             </form>
         </div>
+        {% endblock %}
     </div>
-
+    {% endblock %}
 {% endblock %}
 
 {% block page_javascripts %}
