--- a/src/Bundle/WebBundle/Resources/views/Backend/Regimen/prototypeUpdate.html.twig
+++ b/src/Bundle/WebBundle/Resources/views/Backend/Regimen/prototypeUpdate.html.twig
@@ -17,6 +17,7 @@
 
     {{ parent() }}
     <div class="row">
+        {% block regimen_drug_form %}
         <div class="col-md-6 row-split">
             <h3>{{ 'accard.drug.title'|trans }}</h3>
             {{ form_widget(form.allowDrug) }}
@@ -24,6 +25,8 @@
                 {{ form_widget(form.drugGroup) }}
             </div>
         </div>
+        {% endblock %}
+        {% block regimen_activity_form %}
         <div class="col-md-6">
             <h3>{{ 'accard.activity.activities'|trans }}</h3>
             <div id="accard-prototype-activities" data-prototype="{{ prototype(form.activityPrototypes.vars.prototype)|e }}">
@@ -35,6 +38,7 @@
                 {{- "accard.regimen_prototype.action.add_activity_prototype"|trans -}}
             </a>
         </div>
+        {% endform %}
     </div>
     <hr>
 {% endblock %}
