--- a/src/Bundle/WebBundle/Resources/views/Frontend/Diagnosis/detail.html.twig
+++ b/src/Bundle/WebBundle/Resources/views/Frontend/Diagnosis/detail.html.twig
@@ -5,6 +5,7 @@
 {# For the full copyright and license information, please view the LICENSE #}
 {# file that was distributed with this source code. #}
 
+{% block diagnosis_details %}
 <table class="table table-striped">
 	<tbody>
 		<tr>
@@ -41,3 +42,4 @@
 		</tr>
 	</tbody>
 </table>
+{% endblock %}
