--- a/src/Bundle/WebBundle/Resources/views/Frontend/Regimen/index.html.twig
+++ b/src/Bundle/WebBundle/Resources/views/Frontend/Regimen/index.html.twig
@@ -19,7 +19,7 @@
 {% endif %}
 
 {% block content %}
-    {% block regimen_title %}
+    {% block page_title %}
         {{ page_title('accard.regimen.title.index'|trans, designBtn) }}
     {% endblock %}
 
