--- a/src/Bundle/WebBundle/Resources/views/Frontend/Sample/sourceForm.html.twig
+++ b/src/Bundle/WebBundle/Resources/views/Frontend/Sample/sourceForm.html.twig
@@ -11,23 +11,32 @@
     {{ form_row(sample) }}
 {% endmacro %}
 
+{% block sample_patient_form %}
 <div class="row">
     <div class="col-md-12">
         {{ select_patient(form.patient) }}
     </div>
 </div>
+{% endblock %}
+
 
 <div class="col-md-12 well">
     <div class="row">
+        {% block sample_amount_form %}
         <div class="col-md-6 row-split">
             {{ form_row(form.amount) }}
         </div>
+        {% endblock %}
+        {% block sample_sourceDate_form %}
         <div class="col-md-6">
             {{ form_row(form.sourceDate) }}
         </div>
+        {% endblock %}
     </div>
 </div>
 
+
+{% block sample_additional_fields_form %}
 {% for sample in form.samples %}
 <div class="row">
     <div class="col-md-6">
@@ -35,3 +44,4 @@
     </div>
 </div>
 {% endfor %}
+{% endblock %}
