--- a/src/Bundle/WebBundle/Resources/views/Frontend/Sample/sourceIndex.html.twig
+++ b/src/Bundle/WebBundle/Resources/views/Frontend/Sample/sourceIndex.html.twig
@@ -25,7 +25,7 @@
 {% endif %}
 
 {% block content %}
-    {% block sample_title %}
+    {% block page_title %}
         {{ page_title('accard.sample_source.title.' ~ source ~ '.index'|trans, [createBtn, designBtn]) }}
     {% endblock %}
 
