--- a/src/Bundle/WebBundle/Resources/views/Frontend/layout.html.twig
+++ b/src/Bundle/WebBundle/Resources/views/Frontend/layout.html.twig
@@ -25,7 +25,6 @@
         'bundles/accardweb/css/plugins/datepicker/bootstrap-datepicker-3.css'
         'bundles/accardweb/css/font-awesome.css'
         'bundles/accardweb/css/backend/backend.css'
-        'bundles/accardweb/css/backend/custom.css'
     %}
 <link href="{{ asset_url }}" rel="stylesheet" type="text/css">
     {% endstylesheets %}
@@ -64,7 +63,14 @@
             <!-- /.navbar-header -->
 
             <ul class="nav navbar-top-links navbar-right">
-                <!-- /.dropdown -->
+                <li class="dropdown">
+                    <a class="dropdown-toggle" data-toggle="dropdown" href="#">
+                        <i class="fa fa-history fa-fw"></i> <i class="fa fa-caret-down"></i>
+                    </a>
+                    <ul class="dropdown-menu dropdown-history">
+                        {{ render(controller('AccardWebBundle:Frontend:userLog')) }}
+                    </ul>
+                </li>
                 <li class="dropdown">
                     <a class="dropdown-toggle" data-toggle="dropdown" href="#">
                         <i class="fa fa-tasks fa-fw"></i>  <i class="fa fa-caret-down"></i>
